fix out of bounds selection

--- a/src/components/Layout/Sidebar/Sidebar.module.css
+++ b/src/components/Layout/Sidebar/Sidebar.module.css
@@ -6,8 +6,7 @@
 
 .sidebar-notes__container {
   width: 100%;
-  height: 70vh;
-  max-height: 70vh;
+  min-height: 70vh;
   background-color: rgb(219, 219, 219);
   position: absolute;
   top: 10rem;
