--- a/src/index.css
+++ b/src/index.css
@@ -11,5 +11,4 @@ body {
   -moz-osx-font-smoothing: grayscale;
   letter-spacing: 1px;
   background-color: rgb(233, 232, 232);
-  position: relative;
 }
